# routes/index.js
@@ -3,4 +3,5 @@ const payments = require("./paymentRoutes");
 const store = require("./storeRoutes");
 const voucher = require("./voucherRoutes");
 const auth = require("./auth");
-module.exports = [users, store, payments, auth, voucher];
+const category = require('./categoryRoutes')
+module.exports = [users, store, payments, auth, voucher, category];
