# swagger.json
@@ -522,6 +522,173 @@
           }
         }
       }
+    },
+    "/category/create": {
+      "post": {
+        "tags": ["Categories"],
+        "summary": "Create a single category",
+        "description": "Creates a new category with the provided information.",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "form_data": {
+              "logo": "logo_file",
+              "jsonData": "stringifiedJsonData"
+            },
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/categories"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category Created successfully",
+            "schema": {
+              "$ref": "#/definitions/categories"
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/category/{id}": {
+      "get": {
+        "tags": ["Categories"],
+        "summary": "Get category by ID",
+        "description": "Retrieves a single category by ID",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the category to retrieve",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A single category.",
+            "schema": {
+              "$ref": "#/definitions/categories"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Categories not found!"
+          }
+        }
+      },
+      "patch": {
+        "tags": ["Categories"],
+        "summary": "Update category by ID",
+        "description": "Updates a single category's information.",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the category to update",
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "category",
+            "description": "category object with updated fields",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/categories"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "category updated successfully."
+          },
+          "400": {
+            "description": "Invalid category supplied"
+          },
+          "404": {
+            "description": "category not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Categories"],
+        "summary": "Delete category by ID",
+        "description": "Delete a single category.",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "ID of the category to delete",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "category deleted successfully."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "category not found"
+          }
+        }
+      }
+    },
+    "/category/get-all-categories":{
+      "get": {
+        "tags": ["Categories"],
+        "summary": "Get All category info",
+        "description": "Retrieves all categories",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Retrive All category info",
+            "schema": {
+              "$ref": "#/definitions/categories"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Categories not found!"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -689,6 +856,21 @@
         },
         "logo": {
           "type": "string"
+        }
+      }
+    },
+    "categories":{
+      "type": "object",
+      "required": ["category_name", "logo"],
+      "properties":{
+        "category_name": {
+          "type": "string"
+        },
+        "logo": {
+          "type": "string"
+        },
+        "description":{
+          "type":"string"
         }
       }
     }
